# pre-script

./: .gitignore  LICENSE  README.md  pre_script.pth  pyproject.toml
src/pre_script/: __init__.py
